--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
+        <file>view/main.qml</file>
+        <file>view/Map.qml</file>
     </qresource>
 </RCC>
